data/derived/fa15/progs/unify/prog1910.ml.out
Characters 59-63:
  let fixpoint (f,b) = wwhile ((let func (x,y) = f(x) = y in func),b);;
                                                             ^^^^
Error: This expression has type 'a * 'b -> bool
       but an expression was expected of type 'a * 'b -> ('a * 'b) * bool
       Type bool is not compatible with type ('a * 'b) * bool 
